[gd_scene load_steps=12 format=2]

[ext_resource path="res://shop_menu.gd" type="Script" id=1]
[ext_resource path="res://arrow.png" type="Texture" id=2]
[ext_resource path="res://crops.png" type="Texture" id=3]
[ext_resource path="res://coin.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "cabbageseed",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "cornseed",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 15, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="shop_menu" type="StaticBody2D"]
visible = false
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 56.0
margin_bottom = 34.0
color = Color( 0.278431, 0.243137, 0.243137, 0.184314 )

[node name="icon" type="AnimatedSprite" parent="."]
position = Vector2( 13, 12 )
scale = Vector2( 1.25, 1.25 )
frames = SubResource( 2 )
animation = "cabbageseed"

[node name="lefticon" type="AnimatedSprite" parent="."]
position = Vector2( 10, 24 )
rotation = 1.57079
scale = Vector2( 1.42817, 1.74808 )
frames = SubResource( 4 )

[node name="righticon" type="AnimatedSprite" parent="."]
position = Vector2( 16, 24 )
rotation = -1.57079
scale = Vector2( 1.42817, 1.74808 )
frames = SubResource( 4 )

[node name="leftbutton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 2.0
margin_top = 11.0
margin_right = 14.0
margin_bottom = 31.0

[node name="rightbutton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 13.0
margin_top = 12.0
margin_right = 25.0
margin_bottom = 32.0

[node name="pricelabel" type="RichTextLabel" parent="."]
margin_left = 22.0
margin_top = 3.0
margin_right = 62.0
margin_bottom = 43.0
text = "100"

[node name="coinicon" type="AnimatedSprite" parent="."]
position = Vector2( 52, 9 )
scale = Vector2( 0.625, 0.625 )
frames = SubResource( 6 )

[node name="buycolour" type="ColorRect" parent="."]
margin_left = 28.0
margin_top = 15.0
margin_right = 53.0
margin_bottom = 31.0
color = Color( 0.0666667, 0.623529, 0.298039, 0.662745 )

[node name="buybutton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 28.0
margin_top = 15.0
margin_right = 55.0
margin_bottom = 35.0
rect_scale = Vector2( 0.923955, 0.782013 )

[connection signal="pressed" from="leftbutton" to="." method="_on_leftbutton_pressed"]
[connection signal="pressed" from="rightbutton" to="." method="_on_rightbutton_pressed"]
[connection signal="pressed" from="buybutton" to="." method="_on_buybutton_pressed"]
